[tool.poetry]
name = "ass"
version = "0.1.0"
description = "OpenAI Assistants API Client built with prompt-toolkit"
authors = ["Mario Lang <mlang@blind.guru>"]
include = ["ass/bash.sh", "ass/zsh.sh"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.38.0"
prompt-toolkit = "^3.0.43"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.11.6"
click = "^8.1.7"
httpx = "^0.26.0"
pygments = "^2.17.2"
geopy = "^2.4.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
asynctempfile = "^0.5.0"
pillow = "^10.4.0"
aiosmtplib = "^3.0.1"
playwright = "^1.44.0"
z3-solver = "^4.13.0.0"

[tool.poetry.scripts]
ass = "ass:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
